#46: support strict mapping